# Sylvander

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  README.md  sylvander.env
sylvander-agent/: Cargo.toml  README.md
sylvander-agent/docs/: ARCHITECTURE.md  approval.md  mcp.md  skills.md  turn-context.md  workspace-execution.md
sylvander-agent/src/: approval.rs  approval_store.rs  ask_user_gate.rs  bus.rs  compress.rs  curated_memory.rs  engine.rs  error.rs  event.rs  lib.rs  loop_.rs  mcp_stdio.rs  plan_gate.rs  prompt.rs  provider_adapter.rs  provider_compat.rs  run.rs  session.rs  session_store.rs  spec.rs  task_gate.rs  tool.rs  tool_context.rs  tool_invocation.rs  turn_context.rs  user_profile_prompt.rs  user_profile_provider.rs  workspace_context.rs  workspace_executor.rs  workspace_journal.rs
sylvander-agent/src/compress/: auto_compact_llm.rs  disk.rs  error.rs  layer.rs  mod.rs  pipeline.rs
sylvander-agent/src/provider_adapter/: content.rs
sylvander-agent/src/provider_compat/: content.rs  content_tests.rs
sylvander-agent/src/session_store/: mod.rs  sqlite.rs
sylvander-agent/src/tools/: ask_user.rs  background_task.rs  command.rs  edit.rs  git.rs  list.rs  memory.rs  memory_read.rs  memory_sqlite.rs  memory_sqlite_chain_forget_tests.rs  memory_sqlite_hardening_tests.rs  memory_sqlite_policy_activation_tests.rs  memory_sqlite_retention_tests.rs  memory_sqlite_tests.rs  memory_sqlite_v2_tests.rs  memory_write.rs  mod.rs  plan.rs  read.rs  search.rs  update_plan.rs  write.rs
sylvander-agent/tests/: capability_retry.rs  compress_pipeline.rs  edit_tool_e2e.rs  hook_lifecycle.rs  read_e2e.rs  real_api_agent.rs  real_api_compression.rs  real_api_edit.rs  real_api_multi_turn_compression.rs  real_api_natural_turn.rs  real_api_write.rs  real_use_case.rs  real_use_case_compression.rs  simple_run.rs  streaming_events.rs  write_tool_e2e.rs
sylvander-agent/tests/support/: mod.rs
sylvander-agent/tests/unit/: approval_store.rs  compress_auto_compact_llm.rs  compress_disk.rs  compress_error.rs  compress_layer.rs  compress_layers_auto_compact.rs  compress_layers_context_collapse.rs  compress_layers_micro_compact.rs  compress_layers_orphan_snip.rs  compress_layers_tool_result_budget.rs  compress_pipeline.rs  curated_memory.rs  engine.rs  error.rs  loop_.rs  mcp_stdio.rs  memory_sqlite_chain_forget.rs  memory_sqlite_clock.rs  memory_sqlite_hardening.rs  memory_sqlite_retention.rs  memory_sqlite_v2.rs  prompt.rs  provider_adapter.rs  provider_adapter_content.rs  provider_compat.rs  run.rs  session.rs  session_store_sqlite.rs  spec.rs  support.rs  tool.rs  tool_context.rs  tool_invocation.rs  (+19 more)
sylvander-channel/: Cargo.toml
sylvander-channel-dingtalk/: Cargo.toml
sylvander-channel-dingtalk/src/: lib.rs  protocol.rs
sylvander-channel-dingtalk/tests/: integration.rs
sylvander-channel-http/: Cargo.toml
sylvander-channel-http/src/: lib.rs
sylvander-channel-telegram/: Cargo.toml
sylvander-channel-telegram/src/: lib.rs
sylvander-channel-unix/: Cargo.toml
sylvander-channel-unix/src/: lib.rs
sylvander-channel-wechat/: Cargo.toml
sylvander-channel-wechat/src/: lib.rs  protocol.rs
sylvander-channel-ws/: Cargo.toml
sylvander-channel-ws/src/: lib.rs
sylvander-channel/docs/: ARCHITECTURE.md
sylvander-channel/src/: credential.rs  lib.rs
sylvander-llm-anthropic/: Cargo.toml  README.md
sylvander-llm-anthropic/docs/: ARCHITECTURE.md
sylvander-llm-anthropic/src/: convert.rs  convert_tests.rs  lib.rs  provider.rs  provider_tests.rs
sylvander-llm-anthropic/tests/: blocking.rs  count_tokens.rs  large_stream.rs  messages_batches.rs  messages_create.rs  messages_stream.rs  real_api.rs
sylvander-llm-core/: Cargo.toml
sylvander-llm-core/src/: error.rs  lib.rs  model.rs  provider.rs  types.rs  usage.rs  validation.rs
sylvander-llm-core/tests/: core_contracts.rs
sylvander-protocol/: Cargo.toml
sylvander-protocol/examples/: generate_ui_schema.rs
sylvander-protocol/src/: agent_admin.rs  boundary.rs  bus_trait.rs  identity_binding.rs  in_process.rs  lib.rs  memory_confirmation.rs  registry_admin.rs  schema.rs  session_context.rs  types.rs  ui.rs  user_profile.rs
sylvander-runtime/: CREDENTIAL_AUDIT.md  Cargo.toml  GUARDIAN.md
sylvander-runtime/docs/: ARCHITECTURE.md  channel-supervision.md
sylvander-runtime/src/: adapter.rs  agent_admin.rs  agent_admin_runtime_v3_tests.rs  agent_registry.rs  agent_registry_snapshot.rs  agent_registry_snapshot_tests.rs  agent_registry_snapshot_v3.rs  agent_registry_snapshot_v3_tests.rs  boundary.rs  capability_runtime.rs  coding_worktree.rs  composition.rs  config.rs  credential_audit.rs  credential_registry.rs  credential_registry_tests.rs  evidence.rs  git_worktree.rs  guardian_curation.rs  guardian_runtime.rs  identity_binding_service.rs  identity_binding_service_tests.rs  lib.rs  memory_maintenance.rs  model_registry.rs  model_registry_tests.rs  principal_binding.rs  principal_binding_tests.rs  prompt_limits.rs  provider_catalog_sync.rs  provider_registry.rs  provider_registry_tests.rs  registry_admin.rs  registry_agent_composition_tests.rs  registry_bootstrap.rs  registry_bootstrap_tests.rs  registry_composition.rs  registry_composition_tests.rs  registry_composition_v3.rs  registry_composition_v3_tests.rs  (+8 more)
sylvander-runtime/tests/: e6_registry_schema.rs  real_ssh_worktree.rs
sylvander-server/: Cargo.toml
sylvander-server/src/: credential.rs  main.rs
sylvander-server/tests/: channel_instances.rs  self_improve_cli.rs
sylvander-tui/: Cargo.toml  README.md
sylvander-tui/docs/: ARCHITECTURE.md  CONFIGURATION.md  INPUT-RENDERING.md  INTERACTION-SCENARIOS.md  PRODUCTION-READINESS.md  SECURITY.md
sylvander-tui/src/: app.rs  application.rs  approval_presenter.rs  client.rs  command.rs  compat.rs  component.rs  config.rs  diagnostics.rs  dirty.rs  event.rs  host_bridge.rs  input.rs  keymap.rs  lib.rs  main.rs  markdown.rs  model.rs  runtime.rs  service.rs  terminal_input.rs  theme.rs  tool_presenter.rs  ui.rs  workspace_service.rs
sylvander-tui/tests/: e2e.rs  pty.rs  real_runtime_pty.rs  snapshots.rs
(+441 files in other folders)
