[workspace]
resolver = "2"
members = [
    "sylvander-channel",
    "sylvander-channel-dingtalk",
    "sylvander-server",
    "sylvander-llm-anthropic",
    "sylvander-agent",
    "sylvander-runtime",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.96"
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }

# Stream utilities
futures = "0.3"
futures-util = "0.3"
async-stream = "0.3"

# Error handling
thiserror = "2"

# Logging
tracing = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls-webpki-roots", "gzip"] }

# Byte buffers
bytes = "1"

[workspace.lints.rust]
unsafe_code = "deny"
unreachable_pub = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cast_lossless = "allow"
return_self_not_must_use = "allow"
struct_excessive_bools = "allow"
items_after_statements = "allow"
module_inception = "allow"
format_push_string = "allow"
too_many_lines = "allow"
needless_pass_by_value = "allow"