[package]
name = "sylvander-agent"
description = "Sylvander v2 Agent Loop — async reactive driver for the Anthropic Messages API"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
sylvander-llm-anthropic = { path = "../sylvander-llm-anthropic" }
sylvander-protocol = { path = "../sylvander-protocol" }
tokio = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
async-stream = { workspace = true }
async-trait = "0.1"
serde = { workspace = true }
uuid = { version = "1", features = ["v4"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde_json = "1"
tempfile = "3"
toml = "0.8"

[lints]
workspace = true