[package]
name = "sylvander-agent"
description = "Sylvander v2 Agent Loop — async reactive driver for the Anthropic Messages API"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
sylvander-llm-core = { path = "../sylvander-llm-core" }
sylvander-llm-anthropic = { path = "../sylvander-llm-anthropic" }
sylvander-protocol = { path = "../sylvander-protocol" }
tokio = { workspace = true, features = ["io-util", "process"] }
futures = { workspace = true }
futures-util = { workspace = true }
async-stream = { workspace = true }
async-trait = "0.1"
serde = { workspace = true }
uuid = { version = "1", features = ["v4"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
sha2 = "0.10"
reqwest = { workspace = true, features = ["blocking"] }

# SQLite session store backend (M-D).
# `bundled` ships libsqlite3 — no system SQLite required.
rusqlite = { version = "0.40", features = ["backup", "bundled", "functions"] }

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "test-util", "time"] }
serde_json = "1"
tempfile = "3"
toml = "1.1"

[lints]
workspace = true
