[package]
name = "sylvander-channel-dingtalk"
description = "Sylvander DingTalk channel — DingTalk bot integration"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
sylvander-channel = { path = "../sylvander-channel" }
sylvander-agent = { path = "../sylvander-agent" }
async-trait = "0.1"
axum = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-webpki-roots"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde_json = { workspace = true }

[lints]
workspace = true
