[package]
name = "sylvander-channel-dingtalk"
description = "Sylvander DingTalk channel — DingTalk Stream protocol implementation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
sylvander-channel = { path = "../sylvander-channel" }
sylvander-protocol = { path = "../sylvander-protocol" }
sylvander-agent = { path = "../sylvander-agent" }
async-trait = "0.1"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { version = "0.30", features = ["rustls-tls-webpki-roots"] }
futures-util = { workspace = true }
tracing = { workspace = true }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
axum = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
