[package]
name = "sylvander-channel-telegram"
description = "Sylvander Telegram bot channel"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
sylvander-channel = { path = "../sylvander-channel" }
sylvander-agent = { path = "../sylvander-agent" }
async-trait = "0.1"
axum = { version = "0.8", features = ["json"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-webpki-roots"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { version = "1", features = ["v4"] }

[lints]
workspace = true