[package]
name = "sylvander-channel-wechat"
description = "Sylvander WeChat enterprise bot channel"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
sylvander-channel = { path = "../sylvander-channel" }
sylvander-agent = { path = "../sylvander-agent" }
async-trait = "0.1"
axum = { version = "0.8", features = ["json"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-webpki-roots"] }
serde = { workspace = true }
serde_json = { workspace = true }
quick-xml = { version = "0.36", features = ["serialize"] }
sha1 = "0.10"
aes = "0.8"
cipher = "0.4"
# cbc not needed; using raw aes block cipher + manual CBC
base64 = "0.22"
rand = "0.8"
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"

[lints]
workspace = true