[package]
name = "sylvander-channel-wechat"
description = "Sylvander WeChat enterprise bot channel"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
sylvander-channel = { path = "../sylvander-channel" }
sylvander-protocol = { path = "../sylvander-protocol" }
sylvander-agent = { path = "../sylvander-agent" }
async-trait = "0.1"
axum = { version = "0.8", features = ["json"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "query", "rustls"] }
serde = { workspace = true }
serde_json = { workspace = true }
quick-xml = { version = "0.41", features = ["serialize"] }
sha1 = "0.11"
aes = "0.9"
cipher = "0.5"
# cbc not needed; using raw aes block cipher + manual CBC
base64 = "0.22"
rand = "0.10"
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { version = "1", features = ["v4"] }

[lints]
workspace = true
