[package]
name = "sylvander-llm-anthropic"
description = "Sylvander v2 Anthropic protocol SDK — minimal Rust wrapper for the Anthropic Messages API"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
sylvander-llm-core = { path = "../sylvander-llm-core" }
tokio = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
async-stream = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde_json = "1"

[lints]
workspace = true
