[package]
name = "sylvander-runtime"
description = "Sylvander v2 Runtime — system bootstrap, session persistence, protocol adapters"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
sylvander-agent = { path = "../sylvander-agent" }
sylvander-channel = { path = "../sylvander-channel" }
sylvander-llm-anthropic = { path = "../sylvander-llm-anthropic" }
sylvander-llm-core = { path = "../sylvander-llm-core" }
sylvander-protocol = { path = "../sylvander-protocol" }
tokio = { workspace = true }
async-trait = "0.1"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
toml = "1.1"
rusqlite = { version = "0.40", features = ["bundled"] }
ring = "0.17"
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
url = "2"

[dev-dependencies]
futures-util = { workspace = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tempfile = "3"
wiremock = "0.6"

[lints]
workspace = true
