[package]
name = "sylvander-server"
description = "Sylvander server — boots the agent system with channels"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "sylvander"
path = "src/main.rs"

[[bin]]
name = "sylvander-improve"
path = "src/bin/sylvander-improve.rs"

[dependencies]
sylvander-agent = { path = "../sylvander-agent" }
sylvander-channel = { path = "../sylvander-channel" }
sylvander-channel-dingtalk = { path = "../sylvander-channel-dingtalk" }
sylvander-channel-http = { path = "../sylvander-channel-http" }
sylvander-channel-telegram = { path = "../sylvander-channel-telegram" }
sylvander-channel-unix = { path = "../sylvander-channel-unix" }
sylvander-channel-wechat = { path = "../sylvander-channel-wechat" }
sylvander-channel-ws = { path = "../sylvander-channel-ws" }
sylvander-llm-anthropic = { path = "../sylvander-llm-anthropic" }
sylvander-runtime = { path = "../sylvander-runtime" }
async-trait = "0.1"
sha2 = "0.10"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "signal"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = { workspace = true }

[dev-dependencies]
sylvander-protocol = { path = "../sylvander-protocol" }
tempfile = "3"

[lints]
workspace = true
