[package]
name = "sylvander-tui"
description = "Sylvander TUI client — terminal interface for Sylvander agents"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
sylvander-protocol = { path = "../sylvander-protocol" }
ratatui = "0.29"
crossterm = { version = "0.28", features = ["bracketed-paste"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "io-util", "net", "time"] }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
insta = { version = "1.40", features = ["yaml"] }

[lints]
workspace = true
