[package]
name = "sylvander-tui"
description = "Sylvander TUI client — terminal interface for Sylvander agents"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
sylvander-protocol = { path = "../sylvander-protocol" }
ratatui = "0.30"
crossterm = { version = "0.29", features = ["bracketed-paste"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "io-util", "net", "time"] }
serde = { workspace = true }
serde_json = { workspace = true }
pulldown-cmark = "0.13"
unicode-width = "0.2"
unicode-segmentation = "1.12"
similar = "3.1"
base64 = "0.22"
shell-words = "1.1"

[dev-dependencies]
insta = { version = "1.40", features = ["yaml"] }
portable-pty = "0.9"
sylvander-agent = { path = "../sylvander-agent" }
sylvander-channel = { path = "../sylvander-channel" }
sylvander-channel-unix = { path = "../sylvander-channel-unix" }
sylvander-llm-anthropic = { path = "../sylvander-llm-anthropic" }
tempfile = "3"
wiremock = "0.6"

[lints]
workspace = true
